--- a/css/periodictable.css
+++ b/css/periodictable.css
@@ -192,6 +192,7 @@ kbd,
   color: #fff;
   display: block;
   font-size: 1em;
+  font-weight: bold;
   height: 6.4em;
   overflow: hidden;
   padding: 6px;
@@ -283,7 +284,7 @@ kbd,
 /* info
  * ---------------------------------------------- */
 .info {
-  background: url(img/19.png) white;
+  /*background: url(img/19.png) white;*/
   border-radius: .3em;
   box-shadow: 0 0 12px 2px rgba(0, 0, 0, 0.6);
   display: none;
